--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -1,12 +1,12 @@
 \chapter{Conclusions}
 \label{chapter:conclusions}
 
-In this chapter we present the further improvements for our
+In this chapter I present the further improvements for our
 implementations and the final conclusions of this work.
 
 \section{Further Work}
 
-At the time of implementing the conference application, we used the
+At the time of implementing the conference application, I used the
 presented tools, YSlow and Page Speed, for analyzing the performance
 best practices of the application. However, there are other and newer
 tools especially targeted for analyzing mobile web application
@@ -15,10 +15,10 @@ offers rules for mobile performance
 optimization\footnote{\url{http://code.google.com/speed/page-speed/docs/mobile.html}},
 which add some mobile-specific optimizations. This service would
 probably offer a better alternative for mobile web application
-optimization than the versions we used in our performance analysis.
+optimization than the versions I used in the performance analysis.
 
-One of the major optimizations we were aware of, but did not have time
-to do, was optimizing images. This was a rather large area where we
+One of the major optimizations I was aware of, but did not have time
+to do, was optimizing images. This was a rather large area where I
 could have had significant improvements in the application
 performance. Going further, combining several images into one large
 image sprite would reduce the number of HTTP requests, and using
@@ -51,23 +51,23 @@ devices capable of accessing the Internet. The set of new
 specifications or specification drafts is very large, and growing all
 the time.
 
-In this work, we introduced the latest specifications and drafts
+In this work, I introduced the latest specifications and drafts
 related to modern web application development. Some of these
 specifications already have very good implementations in several
-browsers, but some are just very early drafts. We also presented
-modern tools and libraries for developing mobile web applications.
+browsers, but some are just very early drafts. I also presented modern
+tools and libraries for developing mobile web applications.
 
 Performance is one of the main components of a successful and usable
-application. In this work, we took a practical focus on performance
-optimization of mobile web applications. We also tackled other problem
+application. In this work, I took a practical focus on performance
+optimization of mobile web applications. I also tackled other problem
 ares in developing these HTML5 applications.
 
-We implemented a schedule application for a developer conference and a
+I implemented a schedule application for a developer conference and a
 utility library for handling unreliable mobile networks. The
 conference application was successfully used in two conferences by
-hundreds of people, and the received feedback was excellent. We had to
+hundreds of people, and the received feedback was excellent. I had to
 solve a lot of problems and research solutions in areas that were new
-to us. We used the latest HTML5 and related APIs in several parts of
+to us. I used the latest HTML5 and related APIs in several parts of
 our implementations.
 
 The Web is living very interesting times, and universality in
