--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -123,7 +123,7 @@ Internet. This is the need that \abbr{HTML5} with all the related
 tools and \abbr{APIs} have promised to solve.
 
 Performance is the foundation of a great user experience
-\cite{charland2011mobile}. By performance we mean the speed of
+\cite{charland2011mobile}. By performance, I mean the speed of
 downloading, initializing and using an application as perceived by the
 user as well as the responsiveness and smoothness of the user
 interface influencing the overall user experience.
@@ -135,11 +135,11 @@ savings in development time, deployment, cost-efficiency, and
 cross-platform support can often outweigh the possible
 compromises. \cite{charland2011mobile, fling2009mobile}
 
-In this work we look at the performance of \abbr{HTML5} as a
+In this work I look at the performance of \abbr{HTML5} as a
 cross-platform application platform for different device
-form-factors. To study the performance, we built a real world HTML5
+form-factors. To study the performance, I built a real world HTML5
 application and a JavaScript library and fine-tuned the performance to
-get the best possible user experience. We then asses these
+get the best possible user experience. I then asses these
 optimizations and the compromises that had to be made.
 
 \section{Research Questions}
@@ -200,12 +200,12 @@ are not yet finished. As a drawback, however, the implementations
 might change between browser versions, and developers must take extra
 effort in detecting the supported features. \cite{pilgrim2010html5}
 
-In this work, we look at HTML5 beyond the main specifications, and
-take into account also related standards that affect modern web
-application development. Also, the differences between the W3C and the
-WHATWG specifications are not separated since they are not
-clear-cut. This is the practical view that, in our opinion, the web
-development community has on HTML5.
+In this work, I look at HTML5 beyond the main specifications, and take
+into account also related standards that affect modern web application
+development. Also, the differences between the W3C and the WHATWG
+specifications are not separated since they are not clear-cut. This is
+the practical view that, in my opinion, the web development community
+has on HTML5.
 
 \section{Semantic Markup}
 
@@ -375,7 +375,7 @@ unreliable \cite{zandy2002reliable}, which has raised the need for
 offline support in HTML5.
 
 There are several ways to enable offline support in HTML5
-applications. We present these approaches in the following sections.
+applications. I present these approaches in the following sections.
 
 \subsection{Application Cache}
 \label{section:appcache}
@@ -506,8 +506,8 @@ the \abbr{WHATWG} and some from the work of \abbr{W3C}, some have been
 part of HTML5 at some point but have been taken out of it into their
 own separate specifications, and some are just new specifications for
 the Web that relate to what we can do with HTML, CSS, and JavaScript
-in modern web applications. In the following sections, we introduce
-the specifications that are of interest within the topic of this work.
+in modern web applications. In the following sections, I introduce the
+specifications that are of interest within the topic of this work.
 
 \section{Cascading Style Sheets}
 \label{section:css}
@@ -520,7 +520,7 @@ functionality for older user agents. By letting the browser handle,
 for example, rich user interface animation effects allows developers
 to easily optimize the responsiveness and performance of their
 applications since the browser can use the most efficient techniques
-of the platform to handle these effects. Below we list the main
+of the platform to handle these effects. Below I list the main
 components and specifications of the \abbr{W3C} CSS working
 group\footnote{\url{http://www.w3.org/Style/CSS/members.en.php3}}.
 
@@ -849,7 +849,7 @@ cross-document messaging.
 \section{Device APIs}
 
 One of the main differences between native and web applications is the
-device sensor access. In the following sections we present some
+device sensor access. In the following sections I present some
 specifications that define \abbr{API}s to access the device features
 from JavaScript.
 
@@ -901,7 +901,7 @@ element.
 \section{Other}
 
 There are also lots of other specifications, drafts, and proposals for
-other device feature and sensor data access. Below we list some of
+other device feature and sensor data access. Below I list some of
 these.
 
 \begin{itemize}
@@ -955,7 +955,7 @@ Figure~\ref{figure:anatomy-of-a-html5-mobile-app.png}.
   \label{figure:anatomy-of-a-html5-mobile-app.png}
 \end{figure}
 
-In this chapter, we present tools, libraries, and techniques for
+In this chapter, I present tools, libraries, and techniques for
 building modern web applications.
 
 \section{Single-Page applications}
@@ -1011,7 +1011,7 @@ batman.js\footnote{\url{http://batmanjs.org/}},
 Knockout\footnote{\url{http://knockoutjs.com/}}, and
 JavaScriptMVC\footnote{\url{http://javascriptmvc.com/}}.
 
-One popular framework nowadays is Backbone.js, which we also chose for
+One popular framework nowadays is Backbone.js, which I also chose for
 the application described in
 Chapter~\ref{chapter:methods}. Backbone.js is an open source
 JavaScript framework providing the essential components and structures
@@ -1122,7 +1122,7 @@ them. \cite{parker2010designing}
 
 User Interface libraries help in developing mobile web applications
 fast by providing finished and tested widgets and user interface
-components that can be combined and configured easily. We present some
+components that can be combined and configured easily. I present some
 popular frameworks in the following sections.
 
 \subsection{jQuery Mobile}
@@ -1233,7 +1233,7 @@ related guidelines. According to Souders \cite{souders2007high}, only
 10--20\% of the end user response time is spent generating and
 transferring the HTML document from the web server to the
 client. Therefore, most of the optimization should be done in the
-frontend for best improvement opportunities. Below we list the
+frontend for best improvement opportunities. Below I list the
 performance guidelines defined by Souders \cite{souders2007high}.
 
 \begin{itemize}
