--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -4,18 +4,18 @@
 The Qt Developer
 Days\footnote{\url{http://qt.nokia.com/qtdevdays2011/}} is a
 conference for developers using the Qt cross-platform application and
-user interface framework\footnote{\url{http://qt.nokia.com/}}. We
+user interface framework\footnote{\url{http://qt.nokia.com/}}. I
 created a mobile web application with contextual and personalized
 session information and daily schedule for the conference.
 
-In this chapter we present the implementation requirements for the
+In this chapter I present the implementation requirements for the
 conference application as well as the requirements for the JSONCache
 network utility library.
 
 \section{Conference Application Requirements}
 
 The target group for the conference application was mobile developers
-attending the Qt Developer Days conference. Therefore, we could expect
+attending the Qt Developer Days conference. Therefore, I could expect
 a good technical knowledge and high-end mobile devices from the target
 audience.
 
