Add missing fixmes.

--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -36,6 +36,9 @@ applications.
 
 \section{Discussion}
 
+\fixme{Mention about user feedback and satisfaction using the
+  conference app.}
+
 The Web revolutionized the way we communicate, consume and produce
 information in ways that could not have been foreseen twenty years
 ago. On top of that, the mobile revolution has spread the Web from our
