--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -157,6 +157,11 @@ importance of application performance and responsiveness:
   solve these problems?}
 \end{itemize}
 
+\fixme{Expand on these questions and narrow down the topic of the
+  work.}
+
+\fixme{Outline the structure of this work.}
+
 \chapter{HTML5}
 \label{chapter:html5}
 
