Expand RQs and narrow down the topic.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -151,16 +151,41 @@ importance of application performance and responsiveness:
 \begin{itemize}
 \item \textbf{RQ1}: \textit{What are the main problem areas in mobile
   web development?}
+
+  Mobile web development is a large problem area, and dealing with
+  relatively new technologies and large amounts of devices, finding
+  the main problems is crucial for this work.
+
 \item \textbf{RQ2}: \textit{Do HTML5 and related specifications solve
   these problems?}
+
+  There are a lot of new specifications and \abbr{API}s for web
+  development. Do these specifications solve the problems identified
+  in answering RQ1?
+
 \item \textbf{RQ3}: \textit{What other practical means do we have to
   solve these problems?}
+
+  Not all problems can be solved with specifications and new standard
+  \abbr{API}s. What other practical means and techniques can be used
+  to solve the problems identified in RQ1?
+
 \end{itemize}
 
-\fixme{Expand on these questions and narrow down the topic of the
-  work.}
+I introduce the HTML5 specification and other related standards in a
+generic way, but the practical research is constrained into using the
+new \abbr{API}s in a real-world mobile application. Thus not all APIs
+are applicable or needed, but the ones used are deployed for real end
+users and examined in the current browser implementations. Being a
+large topic, this work focuses especially on the performance aspect of
+the latest APIs and their current implementations to get a good
+overview of the application of the specifications in a real-world
+scenario.
 
-\fixme{Outline the structure of this work.}
+\section{Structure of This Work}
+\label{section:structure-of-this-work}
+
+
 
 \chapter{HTML5}
 \label{chapter:html5}
