Add work outline section.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -185,7 +185,19 @@ scenario.
 \section{Structure of This Work}
 \label{section:structure-of-this-work}
 
+In Chapter~\ref{chapter:html5} and
+Chapter~\ref{chapter:other-related-specifications} I introduce HTML5
+and related specifications and \abbr{API}s for modern web
+development. In Chapter~\ref{chapter:tools-and-techniques} I present
+some of the latest tools, frameworks and libraries for building mobile
+web applications.
 
+In Chapter~\ref{chapter:methods} I introduce the practical part of
+this work and its requirements, and in
+Chapter~\ref{chapter:implementation} I present the implementation
+details and results of the practical research. In
+Chapter~\ref{chapter:conclusions} I sum up the work and discus further
+work ideas.
 
 \chapter{HTML5}
 \label{chapter:html5}
